-*- outline -*-

This file documents user visible changes between versions of StumpWM

* Changes since 0.0.6
These changes are probably incomplete

** New command, title, bound to C-t A
title sets the window's name.

** errors while reloading stumpwm 
A restarts menu now appears that allows you to select a restart, if
you want.

** new function restarts-menu

** modeline update timer
set to 60s by default.

** timers
see run-with-timer and cancel-timer

** improved frame splitting, resizing and removing

** *run-or-raise-all-groups* variable

* Changes since 0.0.5
** quit command

* Changes since 0.0.3

** Frame support
StumpWM now sports basic frame support. No resizing yet.

* Changes since 0.0.2

* Changes since 0.0.1